renamed admin module to users module

--- a/app/users/users.html
+++ b/app/users/users.html
@@ -1,4 +1,4 @@
-<div flex ng-controller="AdminCtrl as vm" layout="column" style="min-width: 1100px; margin: 16px">
+<div flex ng-controller="UserCtrl as vm" layout="column" style="min-width: 1100px; margin: 16px">
 
     <md-toolbar class="panel-toolbar-small md-whiteframe-z1" layout="row" layout-align="start center">
         <span style="margin-left: 8px">{{currentUser.name}}'s Account Details</span>
