--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <script src="app/sensor-graph/sensor-graph.js"></script>
 <script src="app/sensor-list/sensor-list.js"></script>
 <script src="app/sensor-groups/sensor-groups.js"></script>
-<script src="app/admin/admin.js"></script>
+<script src="app/users/users.js"></script>
 <script src="app/alarms/alarms.js"></script>
 <script src="app/alarms/alarms-notify.js"></script>
 <script src="app/widgets/apod/apod-widget.js"></script>
@@ -314,7 +314,7 @@
         <md-content class="md-content-padding">
             <md-list>
                 <md-item>
-                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavRightStateGo('admin')">
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavRightStateGo('users')">
                         <md-button><span class="fa fa-users"></span><span>User Admin</span></md-button>
                     </md-item-content>
                 </md-item>
