--- a/app/health/custom-health/custom-health.html
+++ b/app/health/custom-health/custom-health.html
@@ -1,5 +1,5 @@
 <div flex layout="column" ng-controller="CustomHealthCtrl as vm" style="min-width: 1100px; position: relative"
-     ng-class="{'connection-lost-bg':vm.connectionLost}" ng-mouseup="vm.mouseUp()">
+     ng-class="{'connection-lost-bg':vm.connectionLost}">
     <div class="legend-popup" style="background: transparent; pointer-events: none;" layout="row" ng-init="transparentLegend = true"
          ng-class="{'transparent-legend':transparentLegend && !showLegend}">
         <md-button style="pointer-events: auto;" md-theme="{{themePrimaryButtons}}" ng-init="showLegend = false" ng-click="showLegend = !showLegend"
@@ -17,7 +17,7 @@
             <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Black"></div><span>CAM Sensor Error</span></div>
         </div>
     </div>
-    <div flex style="margin-top: 4px; position: relative; overflow: auto" ng-init="vm.selectedHeight = 400; vm.selectedWidth = 200">
+    <div flex style="margin-top: 4px; position: relative; overflow: auto" ng-init="vm.selectedHeight = 400; vm.selectedWidth = 200" ng-mouseup="vm.mouseUp()">
         <status-single-level-tree-map relative-draggable="status-top-label" auto-resize="true" height="tree.size.height" width="tree.size.width"
                                       offset-left="tree.offset.left" offset-top="tree.offset.top" ng-repeat="tree in vm.customStatusTrees" data="tree"
                                       style="position: absolute; vertical-align: top"
