--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -66,7 +66,7 @@
                         </md-menu-content>
                     </md-menu>
                 </md-toolbar>
-                <div id="scheduleDraftDataRepeat" md-theme="{{themePrimary}}" flex class="md-whiteframe-z2"
+                <div id="scheduleDraftDataRepeat" md-theme="{{themePrimary}}" flex class="md-whiteframe-z2" style="overflow: auto"
                     ng-class="{'maintenance-bg':vm.subarray.maintenance}">
                     <div ng-repeat="item in vm.scheduleDraftData | filter:{sub_nr:vm.subarray.id, state:'APPROVED'} | orderBy:vm.draftsOrderBy.value:vm.draftsOrderBy.reverse track by item.id"
                         flex layout="row" layout-align="start center" ng-class="{'selected-schedule-row': item === vm.selectedScheduleDraft}"
@@ -142,7 +142,8 @@
                 <div ng-include="'app/scheduler/templates/sb-scheduled-list-header.html'" class="list-subheader-title"
                     style="height: 32px; width: 100%"></div>
             </md-toolbar>
-            <div layout="column" style="min-height: 350px; max-height: 350px; overflow: auto" ng-include="'app/scheduler/templates/pb-scheduled-list.html'"></div>
+            <div style="min-height: 350px; max-height: 350px; overflow: auto" ng-if="vm.subarray.mode !== 'auto'" layout="column" flex ng-include="'app/scheduler/templates/pb-scheduled-list.html'"></div>
+            <div style="min-height: 350px; max-height: 350px; overflow: auto" ng-if="vm.subarray.mode === 'auto'" layout="column" flex ng-include="'app/scheduler/templates/auto-schedule-list.html'"></div>
         </div>
     </div>
 
