--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -38,13 +38,13 @@
                 </div>
 
                 <div flex class="unselectable list-subheader-title" layout="row" layout-align="start center" style="padding: 0px 8px; max-height: 17px; overflow: hidden">
-                    <span class="subheader-text resource-sensor-name" style="min-width: 362px" ng-click="vm.setSensorsOrderBy('shortName')">
+                    <span class="subheader-text resource-sensor-name" ng-class="vm.sensorNameResizeClassName" ng-click="vm.setSensorsOrderBy('shortName')">
                         <span>Name</span>
                     <span class="fa" ng-class="{'fa-caret-up': vm.sensorsOrderBy.value === 'shortName' && !vm.sensorsOrderBy.reverse, 'fa-caret-down': vm.sensorsOrderBy.value === 'shortName' && vm.sensorsOrderBy.reverse}"
                         style="margin-right: 4px"></span>
                     </span>
-                    <span class="fa fa-caret-left opacity-hover" style="margin: 0 4px" ng-click="vm.decreaseSensorNameColumnWidth('.resource-sensor-name'); $event.stopPropagation()"></span>
-                    <span class="opacity-hover" ng-click="vm.resetSensorNameColumnWidth('.resource-sensor-name', 400)">|</span>
+                    <span class="fa fa-caret-left opacity-hover" style="margin-left: -28px;margin-right: 4px" ng-click="vm.decreaseSensorNameColumnWidth('.resource-sensor-name'); $event.stopPropagation()"></span>
+                    <span class="opacity-hover" ng-click="vm.resetSensorNameColumnWidth(400)">|</span>
                     <span class="fa fa-caret-right opacity-hover" style="margin: 0 4px" ng-click="vm.increaseSensorNameColumnWidth('.resource-sensor-name'); $event.stopPropagation()"></span>
                     <span class="subheader-text resource-sensor-status-item" ng-click="vm.setSensorsOrderBy('status')">
                         <span>Status</span>
@@ -75,7 +75,7 @@
                 <div ng-repeat="key in filteredSensors = (vm.keys(vm.sensorValues) | regexSearchAndOrder:vm.sensorsOrderByFields:vm.searchFilter:vm.sensorsOrderBy.value:vm.sensorsOrderBy.reverse:vm.sensorValues) | filter:filterByNotNominal track by key"
                     ng-class="{'selected-for-chart-row': vm.sensorValues[key].selectedForChart}" layout="row"
                     layout-align="start center" ng-click="vm.plotLiveSensorFeed(key)">
-                    <span title="" class="resource-sensor-name">{{vm.sensorValues[key].shortName}}</span>
+                    <span title="" class="resource-sensor-name" ng-class="vm.sensorNameResizeClassName">{{vm.sensorValues[key].shortName}}</span>
                     <span class="resource-sensor-status-item" ng-class="vm.sensorClass(vm.sensorValues[key].status)">{{vm.sensorValues[key].status}}</span>
                     <span class="resource-sensor-time-item">{{vm.sensorValues[key].received_timestamp}}</span>
                     <span class="resource-sensor-time-item" ng-show="vm.showValueTimestamp">{{vm.sensorValues[key].timestamp}}</span>
