Move Operator control to the top, and move Device status to the Health section

--- a/index.html
+++ b/index.html
@@ -140,8 +140,15 @@
                     </md-item-content>
                 </md-item>
                 <md-item>
-                    <md-item-content style="border-bottom: 1px solid #e5e5e5;" class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('alarms')">
+                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('alarms')">
                         <md-button><span class="fa fa-warning"></span><span>Alarms</span></md-button>
+                    </md-item-content>
+                </md-item>
+                <md-item>
+                    <md-item-content class="menu-item" style="border-bottom: 1px solid #e5e5e5;" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('operator-control')">
+                        <div class="menu-item" layout="row" layout-align="start center">
+                            <md-button><span class="fa fa-cogs"></span><span>Operator Control</span></md-button>
+                        </div>
                     </md-item-content>
                 </md-item>
                 <md-item>
@@ -167,6 +174,12 @@
                         <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('receptorPointing')">
                             <md-button><span class="fa fa-crosshairs"></span><span>Receptor Pointing</span></md-button>
                         </div>
+                        <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('device-status')">
+                            <md-button><span class="fa fa-th-list"></span><span>Device Status</span></md-button>
+                        </div>
+                </md-item>
+                <md-item>
+                    <md-item-content style="margin-top: 8px; margin-bottom: 8px; padding-bottom: 8px; border-bottom: 1px solid #e5e5e5;" layout="column">
                         <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('customHealth')">
                             <md-button><span class="fa fa-heartbeat"></span><span>Custom Health</span></md-button>
                         </div>
@@ -182,13 +195,6 @@
                         </div>
                         <div ng-repeat="configItem in $root.configHealthViews track by $index" class="menu-item menu-item-indented" layout="row" layout-align="start center">
                             <md-button ng-click="vm.sideNavStateGo('config-health-view', {configItem: configItem})"><span class="fa fa-file-code-o"></span> <span>{{configItem.toUpperCase()}}</span></md-button>
-                        </div>
-                    </md-item-content>
-                </md-item>
-                <md-item>
-                    <md-item-content style="padding-bottom: 8px" ng-click="vm.sideNavStateGo('operator-control')">
-                        <div class="menu-item" layout="row" layout-align="start center">
-                            <md-button><span class="fa fa-cogs"></span><span>Operator Control</span></md-button>
                         </div>
                     </md-item-content>
                 </md-item>
@@ -246,11 +252,6 @@
                 <md-item>
                     <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('sensor-groups')">
                         <md-button><span class="fa fa-list-alt"></span><span>Sensor Groups</span></md-button>
-                    </md-item-content>
-                </md-item>
-                <md-item>
-                    <md-item-content class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('device-status')">
-                        <md-button><span class="fa fa-th-list"></span><span>Device Status</span></md-button>
                     </md-item-content>
                 </md-item>
                 <md-item>
