--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
 <script src="app/d3/receptor-health-partition-map.js"></script>
 <script src="app/d3/receptor-health-icicle-map.js"></script>
 <script src="app/d3/receptor-health-sunburst-map.js"></script>
+<script src="app/d3/correlator-health-items.js"></script>
+<script src="app/d3/correlator-health-pack-map.js"></script>
+<script src="app/d3/correlator-health-partition-map.js"></script>
+<script src="app/d3/correlator-health-icicle-map.js"></script>
+<script src="app/d3/correlator-health-sunburst-map.js"></script>
 <script src="app/d3/status-single-level-tree-map.js"></script>
 <script src="app/d3/timeline.js"></script>
 
@@ -95,6 +100,7 @@
 <script src="app/health/health.js"></script>
 <script src="app/health/healthsub.js"></script>
 <script src="app/health/healthcbf.js"></script>
+<script src="app/health/correlator-health/correlator-health.js"></script>
 <script src="app/health/receptor-health/receptor-health.js"></script>
 <script src="app/health/receptor-status/receptor-status.js"></script>
 <script src="app/health/receptor-pointing/receptor-pointing.js"></script>
@@ -164,6 +170,9 @@
                         </div>
                         <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('healthcbf')">
                             <md-button><span class="fa fa-heart"></span><span>CBF Health</span></md-button>
+                        </div>
+                        <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('correlatorHealth')">
+                            <md-button><span class="fa fa-th-large"></span><span>Correlator Health</span></md-button>
                         </div>
                         <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('receptorHealth')">
                             <md-button><span class="fa fa-th-large"></span><span>Receptor Health</span></md-button>
