--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 <script src="node_modules/angular-material/angular-material.js"></script>
 <script src="node_modules/angular-mocks/angular-mocks.js" data-build="exclude"></script>
 <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="node_modules/angular-ui-tree/dist/angular-ui-tree.js"></script>
 <script src="node_modules/angular-resource/angular-resource.js"></script>
 <script src="node_modules/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="node_modules/ngstorage/ngStorage.js"></script>
