--- a/app/sensor-list/sensor-list.html
+++ b/app/sensor-list/sensor-list.html
@@ -1,10 +1,9 @@
- <form novalidate name="frm1" autocomplete="off" ng-submit="vm.searchFilter=searchText">
 
-<div layout="column" flex ng-controller="SensorListCtrl as vm" style="min-height: 640px; min-width: 1000px">
+<div layout="column" flex ng-controller="SensorListCtrl as vm" style="min-height: 640px; min-width: 1000px" ng-keypress="setFilterOnEnter($event, searchText)">
     <div flex layout="row" style="margin: 8px">
         <div layout="column" style="width: 220px">
             <div layout="column" ng-repeat="node in vm.nodes | orderBy:node:true track by $index" class="md-whiteframe-z1"
-                style="margin-bottom: 8px;" ng-class="{'at-least-400-high': node === 'Proxies'}">
+                style="margin-bottom: 8px;" ng-class="{'at-least-100-high': node === 'Proxies'}">
                 <md-toolbar class="md-whiteframe-z1 md-toolbar-tools-medium" layout="row" layout-align="center center">
                     <span>{{node}}</span>
                 </md-toolbar>
@@ -39,7 +38,7 @@
                         Hide Nominal Sensors
                     </md-checkbox>
                     <input type="text" class="fade-in search-input-box" style="margin: 0 4px" name="search" placeholder="Search...(press enter)"
-                     ng-model="searchText" ng-enter="vm.searchFilter=searchText"
+                     ng-model="searchText" ng-enter="setFilterOnEnter($event, searchText)"
                     />
                     <md-button class="md-primary md-raised" md-theme="{{themePrimaryButtons}}" ng-click="vm.searchFilter=searchText"
                         style="max-width: 28px; min-width: 28px; margin: 0 4px" type="submit" ng-show="false">
