--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                         <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('correlatorHealth')">
                             <md-button><span class="fa fa-th-large"></span><span>Correlator Health</span></md-button>
                         </div>
-                        <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('receptorHealth')">
-                            <md-button><span class="fa fa-th-large"></span><span>Receptor Health</span></md-button>
+                        <div ng-repeat="healthView in $root.receptorHealthViews | orderBy track by $index" class="menu-item menu-item-indented" layout="row" layout-align="start center">
+                            <md-button ng-click="vm.sideNavStateGo('receptorHealth', {healthView: healthView})"><span class="fa fa-th-large"></span> <span>{{healthView.toUpperCase()}} HEALTH</span></md-button>
                         </div>
                         <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('receptorStatus')">
                             <md-button><span class="fa fa-th"></span><span>Receptor Status</span></md-button>
