Cleaning up code

--- a/app/health/health.html
+++ b/app/health/health.html
@@ -13,7 +13,7 @@
             <div layout="row" layout-align="start center"><div class="color-patch error-child" title="Red"></div><span>Error</span></div>
             <div layout="row" layout-align="start center"><div class="color-patch failure-child" title="Blue"></div><span>Failure</span></div>
             <div layout="row" layout-align="start center"><div class="color-patch unreachable-child" title="Pink"></div><span>Unreachable</span></div>
-            <div ng-class="{'background-color:'#9C27B0'}" layout="row" layout-align="start center"><div class="color-patch in-maintenance-child" title="Purple"></div><span>In Maintenance</span></div>
+            <div layout="row" layout-align="start center"><div class="color-patch in-maintenance-child" title="Purple"></div><span>In Maintenance</span></div>
             <div layout="row" layout-align="start center"><div class="color-patch inactive-child" title="Black"></div><span>CAM Sensor Error</span></div>
         </div>
     </div>
