--- a/app/userlogs/userlogdialog.tmpl.html
+++ b/app/userlogs/userlogdialog.tmpl.html
@@ -54,7 +54,11 @@
             </md-input-container>
         </div>
 
-        <div layout="row" layout-align="start center" class="md-whiteframe-z1" style="min-height: 48px; border: 2px solid rgba(0, 0, 0, 0.0)" ng-class="{'chips-tag-input-error': !validTags}">
+        <div layout="row" layout-align="start center" class="md-whiteframe-z1" style=" margin: 16px 0; min-height: 64px; border: 2px solid rgba(0, 0, 0, 0.0)">
+            <textarea ng-model="compoundTags" ng-style="resize: none; width: 100%; max-height: 64px" ng-list="&#10;"></textarea>
+        </div>
+
+        <div layout="row" layout-align="start center" class="md-whiteframe-z1" style="min-height: 64px; border: 2px solid rgba(0, 0, 0, 0.0)" ng-class="{'chips-tag-input-error': !validTags}">
             <md-tooltip md-visible="showInvalidTagsTooltip" md-autohide="false">
                 Select at least one of the mandatory tags: {{mandatoryTagsListString}}
             </md-tooltip>
