--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -125,6 +125,12 @@
                                     <md-button ng-disabled="!parent.vm.iAmAtLeastCA() || item.pb_id === null || item.pb_id === undefined"
                                         ng-click="parent.vm.removeSBFromAnyPB(item)" title="Remove Schedule block from any Program Block">Remove SB From PB</md-button>
                                 </md-menu-item>
+                                <md-menu-item>
+                                    <md-button ng-click="parent.vm.addUserLog($event, item)" title="Add user log">
+                                        <span style="margin-right: 4px"></span>
+                                        <span>Add User Log...</span>
+                                    </md-button>
+                                </md-menu-item>
                             </md-menu-content>
                         </md-menu>
                     </div>
