--- a/app/userlogs/userlogdialog.tmpl.html
+++ b/app/userlogs/userlogdialog.tmpl.html
@@ -55,7 +55,7 @@
         </div>
 
         <div layout="row" layout-align="start center" class="md-whiteframe-z1" style=" margin: 16px 0; min-height: 64px; border: 2px solid rgba(0, 0, 0, 0.0)">
-            <textarea ng-model="compoundTags" ng-style="resize: none; width: 100%; max-height: 64px" ng-list="&#10;"></textarea>
+            <textarea ng-model="compoundTags" style="resize: none; width: 100%; max-height: 64px" ng-list="&#10;" ng-trim="false"></textarea>
         </div>
 
         <div layout="row" layout-align="start center" class="md-whiteframe-z1" style="min-height: 64px; border: 2px solid rgba(0, 0, 0, 0.0)" ng-class="{'chips-tag-input-error': !validTags}">
