--- a/app/userlogs/userlogdialog.tmpl.html
+++ b/app/userlogs/userlogdialog.tmpl.html
@@ -54,8 +54,11 @@
             </md-input-container>
         </div>
 
-        <div layout="row" layout-align="start center" class="md-whiteframe-z1" style=" margin: 16px 0; min-height: 64px; border: 2px solid rgba(0, 0, 0, 0.0)">
-            <textarea ng-model="compoundTags" style="resize: none; width: 100%; max-height: 64px" ng-list="&#10;" ng-trim="false"></textarea>
+        <div class="md-whiteframe-z1" style="margin: 8px 0" flex>
+            <md-input-container style="margin: 24px 0; min-height: 80px; max-height: 80px" class="md-block" flex>
+                <label>Compound Tags</label>
+                <textarea style="overflow-y: scroll; resize: none; width: 250%; min-height: 80px; max-height: 80px; height: 80px" ng-list="&#10;" ng-trim="false" md-select-on-focus rows="2" md-maxlength="1000" ng-model="compound_tags"></textarea>
+            </md-input-container>
         </div>
 
         <div layout="row" layout-align="start center" class="md-whiteframe-z1" style="min-height: 64px; border: 2px solid rgba(0, 0, 0, 0.0)" ng-class="{'chips-tag-input-error': !validTags}">
