--- a/app/userlogs/userlogs.html
+++ b/app/userlogs/userlogs.html
@@ -63,11 +63,11 @@
             <span class="subheader-text" style="cursor: default; width: 50px">
                 Tags
             </span>
-            <span class="subheader-text" style="cursor: default; width: 150px">
-                Compound Tags
-            </span>
             <span class="subheader-text" style="cursor: default; margin-right: 50px">
                 <span class="fa fa-paperclip"></span>
+            </span>
+            <span class="subheader-text" style="cursor: default; width: 50px">
+                <span class="fa fa-tags"></span>
             </span>
         </div>
         <md-button ng-init="vm.expandEntries = false" ng-click="vm.expandEntries = !vm.expandEntries" title="{{vm.expandEntries? 'Collapse All' : 'Expand All'}}" class="inline-action-button"
@@ -103,8 +103,10 @@
                     <span class="fa fa-paperclip"></span>)
                     </span>
                 </span>
-                <span style="min-width: 24px; margin-left: 8px; font-size: 12px">
-                    {{uselog.compound_tags.join(',')}}
+                <span style="min-width: 48px; margin-left: 50px; font-size: 12px">
+                    <span ng-show="userlog.compound_tags.length>0">({{userlog.compound_tags.length}})
+                    <span class="fa fa-tags"></span>
+                    </span>
                 </span>
                 <md-button title="Edit User Log" class="inline-action-button" style="margin: 0"
                            ng-click="$root.editUserLog(userlog, $event)">
@@ -186,8 +188,10 @@
                     <span class="fa fa-paperclip"></span>)
                     </span>
                 </span>
-                <span style="width: 125px; font-size: 12px">
-                    {{userlog.compound_tags.join(',')}}
+                <span style="width: 48px; font-size: 12px">
+                    <span ng-show="userlog.compound_tags.length>0">({{userlog.compound_tags.length}}
+                      <span class="fa fa-tags"></span>)
+                    </span>
                 </span>
                 <md-button title="Edit User Log" class="inline-action-button" style="margin: 0"
                            ng-click="$root.editUserLog(userlog, $event)">
