Removing width of compound tag text box to align with the entire uselog text box

--- a/app/userlogs/userlogdialog.tmpl.html
+++ b/app/userlogs/userlogdialog.tmpl.html
@@ -57,7 +57,7 @@
         <div class="md-whiteframe-z1" style="margin: 8px 0" flex>
             <md-input-container style="margin: 24px 0; min-height: 80px; max-height: 80px" class="md-block" flex>
                 <label>Compound Tags</label>
-                <textarea style="overflow-y: scroll; resize: none; width: 250%; min-height: 80px; max-height: 80px; height: 80px" ng-disabled="editMode" ng-list="&#10;" ng-trim="false" md-select-on-focus rows="2" md-maxlength="1000" ng-model="compound_tags"></textarea>
+                <textarea style="overflow-y: scroll; resize: none; min-height: 80px; max-height: 80px; height: 80px" ng-disabled="editMode" ng-list="&#10;" ng-trim="false" md-select-on-focus rows="2" md-maxlength="1000" ng-model="compound_tags"></textarea>
             </md-input-container>
         </div>
 
