add a feature to be able to add user log from sensor graph and sensor list display.

--- a/app/sensor-graph/sensor-graph.html
+++ b/app/sensor-graph/sensor-graph.html
@@ -92,7 +92,7 @@
             <div flex class="sensor-search-name-list unselectable md-whiteframe-z1">
                 <div class="sensor-search-result-item" ng-repeat="sensor in vm.sensorSearchNames | orderBy:'name' track by $index"
                     ng-click="vm.findSensorData(sensor);" title="{{sensor.attributes.description}}">
-                    <span>{{sensor.name}}</span>
+                    <span ng-right-click menu-items="vm.menuItems">{{sensor.name}}</span>
                 </div>
             </div>
 
