--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <script src="node_modules/angular-mocks/angular-mocks.js" data-build="exclude"></script>
 <script src="node_modules/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="node_modules/angular-resource/angular-resource.js"></script>
+<script src='node_modules/angular-right-click/src/ng-right-click.js'></script>
 <script src="node_modules/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <script src="node_modules/ngstorage/ngStorage.js"></script>
 <script src="node_modules/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
